--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="abc"/>
     <GridView
         android:id="@+id/lstImages"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:numColumns="4"
+        android:numColumns="6"
+        android:horizontalSpacing="8dp"
+        android:verticalSpacing="8dp"
+        android:padding="8dp"
+        android:stretchMode="columnWidth"
         />
+    
 </LinearLayout>
