--- a/app/src/main/res/layout/item_pager_image.xml
+++ b/app/src/main/res/layout/item_pager_image.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000">
-    <ImageView
+    <si.kordez.pocketalbum.view.ImageControl
         android:id="@+id/imgThumbnail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
