--- a/app/src/main/res/layout/dialog_image_info.xml
+++ b/app/src/main/res/layout/dialog_image_info.xml
@@ -34,5 +34,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:text="Close"/>
+        android:text="@string/close"/>
 </LinearLayout>
