--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,8 +4,8 @@
     <style name="Theme.PocketAlbum" parent="android:Theme.Material.Light.NoActionBar" />
 
     <style name="ImageTools">
-        <item name="android:background">#000</item>
-        <item name="android:textColor">#FFF</item>
+        <item name="android:background">@color/black</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     <style name="ImageTools.Label">
         <item name="android:textSize">20sp</item>
