--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,28 @@
     <style name="ImageTools.Label">
         <item name="android:textSize">20sp</item>
     </style>
+    <style name="ActivityTitle">
+        <item name="android:fontFamily">@font/fredoka_medium</item>
+        <item name="android:textSize">34sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="ActivityText">
+        <item name="android:fontFamily">@font/fredoka_regular</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="TextWarning">
+        <item name="android:fontFamily">@font/fredoka_medium</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/redDark</item>
+    </style>
+    <style name="ActivityRoot">
+        <item name="android:background">@color/bluePrimary</item>
+        <item name="android:padding">20dp</item>
+    </style>
+    <style name="ButtonPrimary">
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@color/redPrimary</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
