Image info dialog style

--- a/app/src/main/res/layout/dialog_image_info.xml
+++ b/app/src/main/res/layout/dialog_image_info.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_white"
     android:padding="20dp">
     <TextView
         android:id="@+id/lblFilename"
@@ -34,5 +35,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        style="@style/ButtonPrimary"
         android:text="@string/close"/>
 </LinearLayout>
