--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="bluePrimary">#add8e6</color>
     <color name="blueDark">#71b5cc</color>
 
+    <color name="redLight">#ffc1bd</color>
     <color name="redPrimary">#e6b1ad</color>
     <color name="redDark">#e6617d</color>
 
