--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,7 +31,17 @@
     </style>
     <style name="ButtonPrimary">
         <item name="android:padding">10dp</item>
-        <item name="android:background">@color/redPrimary</item>
+        <item name="android:background">@drawable/background_red</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="DialogWindowPrimary">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowTitleStyle">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <item name="android:backgroundDimEnabled">false</item>
     </style>
 </resources>
