--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <GridView
         android:id="@+id/lstImages"
         android:layout_width="match_parent"
@@ -19,7 +21,40 @@
         android:id="@+id/dateScroller"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="right"/>
+        android:layout_gravity="right"
+        tools:ignore="RtlHardcoded" />
+
+    <LinearLayout
+        android:id="@+id/lltActions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@color/white">
+        <Button
+            android:id="@+id/btnAlbum"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/image_album"
+            android:text="@string/albums"
+            style="@style/ButtonMenu"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/btnSearch"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/magnify"
+            android:text="@string/search"
+            style="@style/ButtonMenu"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/btnSettings"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/cog"
+            android:text="@string/settings"
+            style="@style/ButtonMenu"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
     <si.pocketalbum.view.SlidingGallery
         android:id="@+id/slidingGallery"
