--- a/app/src/main/res/layout/view_album_view.xml
+++ b/app/src/main/res/layout/view_album_view.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:src="@drawable/baseline_photo_album_24"
+        android:src="@drawable/image_album"
         android:layout_margin="5dp"/>
     <LinearLayout
         android:layout_width="wrap_content"
