--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,6 +34,10 @@
         <item name="android:background">@drawable/background_red</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="ButtonMenu">
+        <item name="android:background">@color/white</item>
+        <item name="android:padding">5dp</item>
+    </style>
     <style name="DialogWindowPrimary">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowBackground">@android:color/transparent</item>
