--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -17,8 +16,7 @@
         android:stretchMode="columnWidth"
         android:scrollbars="none"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/lltActions"
-        />
+        app:layout_constraintBottom_toTopOf="@id/lltActions" />
 
     <si.pocketalbum.view.DateScroller
         android:id="@+id/dateScroller"
@@ -28,12 +26,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/lltActions"/>
 
+    <si.pocketalbum.view.SearchPanel
+        android:id="@+id/pnlSearch"
+        android:layout_width="360dp"
+        android:layout_height="130dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/lltActions"
+        android:visibility="gone"/>
+
     <LinearLayout
         android:id="@+id/lltActions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/white">
+        android:paddingTop="3dp"
+        android:background="@drawable/background_white_top">
         <Button
             android:id="@+id/btnAlbum"
             android:layout_width="0dp"
