--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,16 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="PanelTitle">
+        <item name="android:fontFamily">@font/fredoka_medium</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="PanelText">
+        <item name="android:fontFamily">@font/fredoka_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
     <style name="TextWarning">
         <item name="android:fontFamily">@font/fredoka_medium</item>
         <item name="android:textSize">18sp</item>
@@ -33,6 +43,17 @@
         <item name="android:padding">10dp</item>
         <item name="android:background">@drawable/background_red</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="ButtonPrimary.Small" parent="ButtonPrimary">
+        <item name="android:minHeight">10dp</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+    <style name="ButtonSecondary" parent="ButtonPrimary">
+        <item name="android:background">@drawable/background_white</item>
+    </style>
+    <style name="ButtonSecondary.Small" parent="ButtonSecondary">
+        <item name="android:minHeight">10dp</item>
+        <item name="android:textSize">12sp</item>
     </style>
     <style name="ButtonMenu">
         <item name="android:background">@color/white</item>
