--- a/app/src/main/res/layout/view_search_panel.xml
+++ b/app/src/main/res/layout/view_search_panel.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background_white_bottom"
     android:padding="20dp">
@@ -43,5 +44,21 @@
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lblTitle"/>
+
+    <TextView
+        android:id="@+id/lblLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/PanelText"
+        android:text="@string/location_map"
+        app:layout_constraintTop_toBottomOf="@id/partOfDay"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginVertical="10dp"/>
+
+    <si.pocketalbum.view.search.LocationsMap
+        android:layout_width="match_parent"
+        android:layout_height="320dp"
+        android:layout_marginVertical="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/lblLocation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
