--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="date_button_width">64dp</dimen>
     <dimen name="tile_size">80dp</dimen>
+
+    <dimen name="button_small">40dp</dimen>
 </resources>
