--- a/app/src/main/res/layout/view_search_panel.xml
+++ b/app/src/main/res/layout/view_search_panel.xml
@@ -37,7 +37,7 @@
         style="@style/PanelText"
         android:text="@string/part_of_day"/>
 
-    <si.pocketalbum.view.PartOfDay
+    <si.pocketalbum.view.search.PartOfDay
         android:id="@+id/partOfDay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -56,6 +56,7 @@
         android:layout_marginVertical="10dp"/>
 
     <si.pocketalbum.view.search.LocationsMap
+        android:id="@+id/locationsMap"
         android:layout_width="match_parent"
         android:layout_height="320dp"
         android:layout_marginVertical="5dp"
