--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/lltActions" />
 
-    <si.pocketalbum.view.DateScroller
+    <si.pocketalbum.view.timeline.DateScroller
         android:id="@+id/dateScroller"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
