Show locations heatmap on map

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,7 @@
     <color name="redDark">#e6617d</color>
 
     <color name="brownPrimary">#e6cdad</color>
+
+    <color name="heatmapMin">#ffd500</color>
+    <color name="heatmapMax">#c2042c</color>
 </resources>
