--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="date_button_width">64dp</dimen>
+    <dimen name="date_scroller_width">192dp</dimen>
     <dimen name="tile_size">80dp</dimen>
 
     <dimen name="button_small">40dp</dimen>
