--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
 
     <color name="heatmapMin">#ffd500</color>
     <color name="heatmapMax">#c2042c</color>
+    <color name="transparent">#00000000</color>
 </resources>
