--- a/app/src/main/res/drawable/background_red.xml
+++ b/app/src/main/res/drawable/background_red.xml
@@ -11,5 +11,5 @@
         android:bottom="8dp" />
     <stroke
         android:width="3dp"
-        android:color="@color/black" />
+        android:color="@color/text" />
 </shape>
