--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="background">#FFFFFF</color>
+    <color name="text">#111111</color>
+
     <color name="bluePrimary">#add8e6</color>
     <color name="blueDark">#71b5cc</color>
 
