--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.PocketAlbum" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.PocketAlbum" parent="Theme.AppCompat.DayNight">
+        <item name="android:textColor">@color/text</item>
+    </style>
 
     <style name="ImageTools">
         <item name="android:background">@color/black</item>
@@ -23,12 +25,10 @@
     <style name="PanelTitle">
         <item name="android:fontFamily">@font/fredoka_medium</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:textColor">@color/black</item>
     </style>
     <style name="PanelText">
         <item name="android:fontFamily">@font/fredoka_regular</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/black</item>
     </style>
     <style name="TextWarning">
         <item name="android:fontFamily">@font/fredoka_medium</item>
@@ -49,15 +49,17 @@
         <item name="android:textSize">12sp</item>
     </style>
     <style name="ButtonSecondary" parent="ButtonPrimary">
-        <item name="android:background">@drawable/background_white</item>
+        <item name="android:background">@drawable/background_primary</item>
     </style>
     <style name="ButtonSecondary.Small" parent="ButtonSecondary">
         <item name="android:minHeight">10dp</item>
         <item name="android:textSize">12sp</item>
+        <item name="android:tint">@color/text</item>
     </style>
     <style name="ButtonMenu">
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/background</item>
         <item name="android:padding">5dp</item>
+        <item name="android:drawableTint">@color/text</item>
     </style>
     <style name="DialogWindowPrimary">
         <item name="android:windowFrame">@null</item>
