--- a/app/src/main/res/drawable/button_round.xml
+++ b/app/src/main/res/drawable/button_round.xml
@@ -10,5 +10,5 @@
         android:bottom="8dp" />
     <stroke
         android:width="3dp"
-        android:color="@color/black" />
+        android:color="@color/text" />
 </shape>
