--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/Theme.PocketAlbum">
 
     <GridView
         android:id="@+id/lstImages"
@@ -52,7 +53,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         android:paddingTop="3dp"
-        android:background="@drawable/background_white_top">
+        android:background="@drawable/background_primary_top">
         <Button
             android:id="@+id/btnAlbum"
             android:layout_width="0dp"
