--- a/app/src/main/res/layout/view_album_view.xml
+++ b/app/src/main/res/layout/view_album_view.xml
@@ -8,6 +8,7 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:src="@drawable/image_album"
+        android:tint="@color/text"
         android:layout_margin="5dp"/>
     <LinearLayout
         android:layout_width="wrap_content"
