--- a/app/src/main/res/layout/view_locations_map.xml
+++ b/app/src/main/res/layout/view_locations_map.xml
@@ -27,7 +27,7 @@
         android:layout_width="@dimen/button_small"
         android:layout_height="@dimen/button_small"
         android:src="@drawable/minus"
-        android:background="@drawable/background_white"
+        style="@style/ButtonSecondary.Small"
         app:layout_constraintEnd_toStartOf="@id/btnZoomIn"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="5dp"/>
@@ -37,7 +37,7 @@
         android:layout_width="@dimen/button_small"
         android:layout_height="@dimen/button_small"
         android:src="@drawable/plus"
-        android:background="@drawable/background_white"
+        style="@style/ButtonSecondary.Small"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="5dp"/>
