--- a/app/src/main/res/layout/view_panel_settings.xml
+++ b/app/src/main/res/layout/view_panel_settings.xml
@@ -45,4 +45,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lblTitle"/>
 
+    <TextView
+        android:id="@+id/lblThumbnailsSize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/PanelText"
+        android:text="@string/thumbnails_size"
+        app:layout_constraintTop_toBottomOf="@id/displayTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginVertical="10dp"/>
+
+    <SeekBar
+        android:id="@+id/skbThumbnailSize"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:min="50"
+        android:max="100"
+        app:layout_constraintStart_toEndOf="@id/lblThumbnailsSize"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lblThumbnailsSize"
+        app:layout_constraintTop_toTopOf="@id/lblThumbnailsSize"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
