Show more information about the current album

--- a/app/src/main/res/layout/view_panel_albums.xml
+++ b/app/src/main/res/layout/view_panel_albums.xml
@@ -27,7 +27,7 @@
         style="@style/PanelTitle"
         android:text="@string/albums"/>
 
-    <si.pocketalbum.view.AlbumView
+    <si.pocketalbum.view.CurrentAlbum
         android:id="@+id/albumView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
