Grid layout in image info dialog

--- a/app/src/main/res/layout/dialog_image_info.xml
+++ b/app/src/main/res/layout/dialog_image_info.xml
@@ -1,40 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/background_primary"
     android:padding="20dp">
+
+    <ImageButton
+        android:id="@+id/btnClose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:src="@drawable/close"
+        android:layout_row="0"
+        android:layout_column="1"
+        android:layout_gravity="end"
+        android:contentDescription="@string/close"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_row="1"
+        android:text="@string/file_name"
+        style="@style/PropertyText"/>
     <TextView
         android:id="@+id/lblFilename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"/>
+        android:layout_column="1"
+        android:layout_row="1"
+        android:layout_gravity="end"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_row="2"
+        android:text="@string/created"
+        style="@style/PropertyText"/>
     <TextView
         android:id="@+id/lblDateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"/>
+        android:layout_column="1"
+        android:layout_row="2"
+        android:layout_gravity="end"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_row="3"
+        android:text="@string/location"
+        style="@style/PropertyText"/>
     <TextView
         android:id="@+id/lblCoordinates"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"/>
+        android:layout_column="1"
+        android:layout_row="3"
+        android:layout_gravity="end"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_row="4"
+        android:text="@string/dimensions"
+        style="@style/PropertyText"/>
     <TextView
         android:id="@+id/lblDimensions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"/>
+        android:layout_column="1"
+        android:layout_row="4"
+        android:layout_gravity="end"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_row="5"
+        android:text="@string/original_size"
+        style="@style/PropertyText"/>
     <TextView
         android:id="@+id/lblOriginalSize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"/>
-    <Button
-        android:id="@+id/btnClose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        style="@style/ButtonPrimary"
-        android:text="@string/close"/>
-</LinearLayout>
+        android:layout_column="1"
+        android:layout_row="5"
+        android:layout_gravity="end"/>
+</GridLayout>
