--- a/app/src/main/res/layout/view_sliding_gallery.xml
+++ b/app/src/main/res/layout/view_sliding_gallery.xml
@@ -7,14 +7,14 @@
         android:id="@+id/vpgImages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black"/>
+        android:background="@color/background" />
 
     <LinearLayout
         android:id="@+id/lltDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:padding="5dp"
         style="@style/ImageTools">
 
@@ -23,6 +23,7 @@
             android:layout_width="@dimen/button_large"
             android:layout_height="@dimen/button_large"
             android:src="@drawable/arrow_back_24"
+            android:tint="@color/text"
             android:background="@color/transparent"/>
 
         <LinearLayout
@@ -34,12 +35,12 @@
                 android:id="@+id/lblDateTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/ImageTools.Label"/>
+                style="@style/ImageTools.Label" />
             <TextView
                 android:id="@+id/lblCoordinates"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/ImageTools"/>
+                style="@style/ImageTools" />
         </LinearLayout>
     </LinearLayout>
 
@@ -49,33 +50,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:paddingTop="3dp"
+        android:background="@drawable/background_primary_top"
         android:visibility="invisible">
         <Button
             android:id="@+id/btnMap"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingVertical="10dp"
-            style="@style/ImageTools"
+            android:drawableTop="@drawable/map"
             android:text="@string/map"
+            style="@style/ButtonMenu"
             />
         <Button
             android:id="@+id/btnShare"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingVertical="10dp"
-            style="@style/ImageTools"
+            android:drawableTop="@drawable/share"
             android:text="@string/share"
+            style="@style/ButtonMenu"
             />
         <Button
             android:id="@+id/btnInfo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingVertical="10dp"
-            style="@style/ImageTools"
+            android:drawableTop="@drawable/information_box"
             android:text="@string/info"
+            style="@style/ButtonMenu"
             />
     </LinearLayout>
 </FrameLayout>
