--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,8 +7,8 @@
     </style>
 
     <style name="ImageTools">
-        <item name="android:background">@color/black</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/background</item>
+        <item name="android:textColor">@color/text</item>
     </style>
     <style name="ImageTools.Label">
         <item name="android:textSize">20sp</item>
