--- a/app/src/main/res/layout/view_sliding_gallery.xml
+++ b/app/src/main/res/layout/view_sliding_gallery.xml
@@ -12,37 +12,39 @@
 
     <LinearLayout
         android:id="@+id/lltDetails"
+        style="@style/ImageTools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent"
         android:padding="5dp"
-        style="@style/ImageTools">
+        android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:id="@+id/btnBack"
             android:layout_width="@dimen/button_large"
             android:layout_height="@dimen/button_large"
+            android:background="@color/transparent"
             android:src="@drawable/arrow_back_24"
-            android:tint="@color/text"
-            android:background="@color/transparent"/>
+            android:tint="@color/text" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="5dp">
+
             <TextView
                 android:id="@+id/lblDateTime"
+                style="@style/ImageTools.Label"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/ImageTools.Label" />
+                android:layout_height="wrap_content" />
+
             <TextView
                 android:id="@+id/lblCoordinates"
+                style="@style/ImageTools"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/ImageTools" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
 
@@ -50,20 +52,20 @@
         android:id="@+id/pnlInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintWidth_max="400dp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/lltActions"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintWidth_max="400dp" />
 
     <LinearLayout
         android:id="@+id/lltActions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/background_primary_top"
         android:orientation="horizontal"
         android:paddingTop="3dp"
-        android:background="@drawable/background_primary_top"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent">
         <Button
             android:id="@+id/btnMap"
@@ -74,6 +76,33 @@
             android:text="@string/map"
             style="@style/ButtonMenu"
             />
+
+        <LinearLayout
+            android:id="@+id/pnlCast"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:background="@color/background">
+
+            <androidx.mediarouter.app.MediaRouteButton
+                android:id="@+id/btnCast"
+                android:layout_width="match_parent"
+                android:layout_height="24dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/transparent"
+
+                android:paddingVertical="10dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/cast"
+                android:textAlignment="center"
+                android:textFontWeight="500"
+                android:textAllCaps="true"/>
+        </LinearLayout>
+
         <Button
             android:id="@+id/btnShare"
             android:layout_width="0dp"
