--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -66,6 +66,7 @@
         <item name="android:background">@color/background</item>
         <item name="android:padding">5dp</item>
         <item name="android:drawableTint">@color/text</item>
+        <item name="android:stateListAnimator">@null</item>
     </style>
     <style name="DialogWindowPrimary">
         <item name="android:windowFrame">@null</item>
