Immersive photo view

--- a/app/src/main/res/layout/view_sliding_gallery.xml
+++ b/app/src/main/res/layout/view_sliding_gallery.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/pnlRoot"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background">
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vpgImages"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/background" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/lltDetails"
+        app:layout_constraintBottom_toTopOf="@+id/lltActions"/>
 
     <LinearLayout
         android:id="@+id/lltDetails"
@@ -16,8 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="5dp"
-        android:visibility="invisible"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
@@ -65,7 +67,6 @@
         android:background="@drawable/background_primary_top"
         android:orientation="horizontal"
         android:paddingTop="3dp"
-        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent">
         <Button
             android:id="@+id/btnMap"
