--- a/app/src/main/res/layout/activity_import.xml
+++ b/app/src/main/res/layout/activity_import.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/ActivityRoot">
+    style="@style/ActivityRoot"
+    android:id="@+id/pnlRoot">
 
     <TextView
         android:layout_width="wrap_content"
