--- a/app/src/main/res/layout/activity_import.xml
+++ b/app/src/main/res/layout/activity_import.xml
@@ -27,7 +27,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             style="?android:attr/progressBarStyleHorizontal"
-            android:progressDrawable="@drawable/progress_bar"/>
+            android:progressDrawable="@drawable/progress_bar"
+            android:max="1000"/>
 
         <LinearLayout
             android:layout_width="match_parent"
