--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="button_large">50dp</dimen>
     <dimen name="timeline_line_width">2dp</dimen>
     <dimen name="timeline_text_size">16sp</dimen>
+    <dimen name="margin_regular">10dp</dimen>
 </resources>
